syntax = "proto3";

package protocol;

option go_package = "./reduced;reduced";

message BestSellingProducts {
  string year_month_created_at = 1;
  int32 item_id = 2;
  int64 sellings_qty = 3;
}

message BestSellingProductsBatch {
  repeated BestSellingProducts items = 1;
}
