syntax = "proto3";

package protocol;

option go_package = "./reduced;reduced";

message MostPurchasesUser {
  int32 store_id = 1;
  int32 user_id = 2;
  int32 purchases_qty = 3;
}

message MostPurchasesUserBatch {
  repeated MostPurchasesUser users = 1;
}
